--- a/Cliente/Cliente/Cliente/Properties/Settings.settings
+++ b/Cliente/Cliente/Cliente/Properties/Settings.settings
@@ -1,7 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Cliente.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="Cliente_gestionusuario_GestionUsuarios" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://localhost:9080/PracticaFinal/services/GestionUsuarios/</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
