--- a/Cliente/Cliente/Cliente/App.config
+++ b/Cliente/Cliente/Cliente/App.config
@@ -13,6 +13,18 @@
             <setting name="Cliente_gestionusuario_GestionUsuarios" serializeAs="String">
                 <value>http://localhost:9080/PracticaFinal/services/GestionUsuarios/</value>
             </setting>
+            <setting name="Cliente_proveedores_proveedor2" serializeAs="String">
+                <value>http://localhost:9080/PracticaFinal/services/proveedor2</value>
+            </setting>
+            <setting name="Cliente_proveedores_proveedor1" serializeAs="String">
+                <value>http://localhost:9080/PracticaFinal/services/proveedor1</value>
+            </setting>
+            <setting name="Cliente_proveedores_proveedor3" serializeAs="String">
+                <value>http://localhost:9080/PracticaFinal/services/proveedor3</value>
+            </setting>
+            <setting name="Cliente_proveedores_ReservaPersService" serializeAs="String">
+                <value>http://localhost:8080/ode/processes/ReservaPers</value>
+            </setting>
         </Cliente.Properties.Settings>
     </applicationSettings>
 </configuration>
