--- a/Cliente/Cliente/Cliente/Properties/Settings.settings
+++ b/Cliente/Cliente/Cliente/Properties/Settings.settings
@@ -5,5 +5,17 @@
     <Setting Name="Cliente_gestionusuario_GestionUsuarios" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">http://localhost:9080/PracticaFinal/services/GestionUsuarios/</Value>
     </Setting>
+    <Setting Name="Cliente_proveedores_proveedor2" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://localhost:9080/PracticaFinal/services/proveedor2</Value>
+    </Setting>
+    <Setting Name="Cliente_proveedores_proveedor1" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">http://localhost:9080/PracticaFinal/services/proveedor1</Value>
+    </Setting>
+    <Setting Name="Cliente_proveedores_proveedor3" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">http://localhost:9080/PracticaFinal/services/proveedor3</Value>
+    </Setting>
+    <Setting Name="Cliente_proveedores_ReservaPersService" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">http://localhost:8080/ode/processes/ReservaPers</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
