--- a/Cliente/Cliente/Cliente/App.config
+++ b/Cliente/Cliente/Cliente/App.config
@@ -25,6 +25,9 @@
             <setting name="Cliente_proveedores_ReservaPersService" serializeAs="String">
                 <value>http://localhost:8080/ode/processes/ReservaPers</value>
             </setting>
+            <setting name="Cliente_gesReserva_GestionReserva" serializeAs="String">
+                <value>http://localhost:9080/PracticaFinal/services/GestionReserva/</value>
+            </setting>
         </Cliente.Properties.Settings>
     </applicationSettings>
 </configuration>
