--- a/Cliente/Cliente/Cliente/Cliente.csproj
+++ b/Cliente/Cliente/Cliente/Cliente.csproj
@@ -122,7 +122,7 @@
       <Generator>MSDiscoCodeGenerator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
-    <None Include="Web References\gesReserva\Reserva.datasource">
+    <None Include="Web References\gesReserva\ReservaEdicion.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
     <None Include="Web References\gestionusuario\GestionUsuarios.wsdl" />
