--- a/Cliente/Cliente/Cliente/Cliente.csproj
+++ b/Cliente/Cliente/Cliente/Cliente.csproj
@@ -58,6 +58,12 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModificarReserva.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModificarReserva.Designer.cs">
+      <DependentUpon>ModificarReserva.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proveedores.cs">
@@ -93,6 +99,9 @@
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ModificarReserva.resx">
+      <DependentUpon>ModificarReserva.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -122,7 +131,7 @@
       <Generator>MSDiscoCodeGenerator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
-    <None Include="Web References\gesReserva\Reserva.datasource">
+    <None Include="Web References\gesReserva\ReservaEdicion.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
     <None Include="Web References\gestionusuario\GestionUsuarios.wsdl" />
